fix(ui): align icons better

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,3 +25,6 @@ h2 {
   font-weight: 300;
 }
 
+.react-icons {
+  vertical-align: bottom;
+}
